@@ -40,8 +40,13 @@ sox-12.17.9
     Matthew Hodgson.
   o Add fix to WAV handler to only return data in multiples
     of sample_size*channels to better handle corrupt files.
-  o Fixed bug where "-4" option didn't work with avg effect.
-    (Tom Christie)
+  o Fixed bug where "-4" option didn't work with avg
+    effect (Tom Christie).
+  o Fixed fade's fade-out-length to match man page
+    description as noted by Geoff Kuenning.  This required
+    updates to the sample crossfade scripts.  Also modified fade
+    effect to report when no more samples will be produced to
+    prevent unneeded reading of whole file.
 
 sox-12.17.8
 -----------
